  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> andalus-1-r1.ebuild:
  media-fonts/andalus:  updated to EAPI="6"

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog