@@ -1,4 +1,4 @@
 DIST andlso.ttf 158956 BLAKE2B b190aa14f3f9e34190dcc04c6285c3b18827a11145b6593f9b8440abdc6ce9aca30ed77b1f60dff1ec09dfbbb7d661a7aef007f48f63c2bb2fcc7888872b1d57 SHA512 085da209e4927c8ad5635a71e720e136b4e699cb8d9a0122bfc9911bf46c65f1404b842538395549fa9ce0ade15f9e425ccb80011799453f2a93f8f3469594c1
-EBUILD andalus-1-r1.ebuild 576 BLAKE2B bb5c61514a7fb4c12185ec16b9c158d059fe16fa26ca73d87ebdd5f16335a6c69b68e8bf12b64b5cf7d01b9761d5cb74f769234e4f34ff437944912b8f3158e0 SHA512 a87c4004dca5e81399009c03eacef4881d5bab39e3a5dd7d800bea04afa3c2ab5d848dac81e4bf675011f048c75ab2e13006501fec3a8d51b4d50d034dc83369
-MISC ChangeLog 198 BLAKE2B 69373494de84c8a4f088912748296195eb763eeb5ea4c6948d8df3a1746dc8eed75407dcb9b731201b5e879fbaeb4055a81df54294465d8ad2c3d8cc8ff53291 SHA512 f9d11183078aab1c85dbe53c4c433876f778e475e9564b0a4087ce68cde9bbc372b86475bfd631665cc6763353ed3235bb928bf4bb5938867675e86b93f85cb7
+EBUILD andalus-1-r2.ebuild 640 BLAKE2B ce4d79e91890f85209ce8dba3dab28b198a904542c27ef464b96daa41411c381ccdd8e2ed22fe875dff9dc38bcdca95d0559dbd3758725c1af07a0c6e98f0bab SHA512 a61ea227ed76ab2c8080acd9a66f931bf4147ca4f809eaba11b99edd37ebcd3150f122a9e7e397b76be0cec5d7e025c23b089a442a32ceae211de2620c8e85c3
+MISC ChangeLog 373 BLAKE2B 832bc80862eb805822f11e665e3d4a1165ed2a5bdb9682a4c6f19732fa3238a9a2fe8a89d64090732b1659028422bbe09c24de4d6b1e65c037897e8c570e6af8 SHA512 1f381b8dbe9811eb42f73510ed76c7592f8de48d17df90a94da0430380d246b4d343ba5f10b19717902e98eb573df06425e7d29950a5573631692575d8cca3d1
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
