@@ -1,7 +1,7 @@
-# Copyright 1999-2019 Gentoo Authors
+# Copyright 1999-2021 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI="6"
+EAPI="7"
 
 inherit font
 
@@ -9,8 +9,8 @@ MY_PN="andalus"
 MY_P="${MY_PN}"
 S="${WORKDIR}"
 DESCRIPTION="Andalus Truetype Font"
-HOMEPAGE="http://fontzone.net/font-download/andalus"
-SRC_URI="http://fontzone.net/downloadfile/andalus -> andlso.ttf"
+HOMEPAGE="https://fontzone.net/font-download/andalus"
+SRC_URI="https://fontzone.net/downloadfile/andalus -> andlso.ttf"
 LICENSE="all-rights-reserved"
 
 SLOT="0"
@@ -24,5 +24,6 @@ RDEPEND=""
 
 pkg_nofetch() {
 	einfo "Please download ${MY_P} from here:"
-	einfo "http://fontzone.net/font-download/andalus"
+	einfo "https://fontzone.net/font-download/andalus"
+	einfo "and save it as '/usr/portage/distfiles/andlso.ttf'."
 }
